concord_macros/tests/dsl/fail/fail_duplicate_default.stderr
error: multiple default blocks are not allowed in the current DSL
 --> tests/dsl/fail/fail_duplicate_default.rs:8:17
  |
8 |         default { rate_limit app }
  |                 ^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_duplicate_default.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
